{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 25,
  "lineage": "e73923fc-a470-8703-0a77-476c19de84fb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-19T13:27:49.561-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/genuine-rope-423613-a9/global/firewalls/bastion-firewall",
            "log_config": [],
            "name": "bastion-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "genuine-rope-423613-a9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/firewalls/bastion-firewall",
            "source_ranges": [
              "10.0.0.0/24",
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "compute_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-05-19T13:38:29.854-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/genuine-rope-423613-a9/global/firewalls/compute-firewall",
            "log_config": [],
            "name": "compute-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "genuine-rope-423613-a9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/firewalls/compute-firewall",
            "source_ranges": [
              "10.0.0.0/24",
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "db_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-05-19T13:38:29.781-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/genuine-rope-423613-a9/global/firewalls/db-firewall",
            "log_config": [],
            "name": "db-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "genuine-rope-423613-a9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/firewalls/db-firewall",
            "source_ranges": [
              "10.0.0.0/24",
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-a/disks/bastion-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/genuine-rope-423613-a9/zones/us-central1-a/instances/bastion-instance",
            "instance_id": "7998481829955361751",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cV7Jrqpe2bE=",
            "name": "bastion-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.76.23",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-subnet",
                "subnetwork_project": "genuine-rope-423613-a9"
              }
            ],
            "project": "genuine-rope-423613-a9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-a/instances/bastion-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.bastion_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-c/disks/compute-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/genuine-rope-423613-a9/zones/us-central1-c/instances/compute-instance",
            "instance_id": "211649102321540057",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cV7Jrqpe2bE=",
            "name": "compute-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.128.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-compute",
                "subnetwork_project": "genuine-rope-423613-a9"
              }
            ],
            "project": "genuine-rope-423613-a9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-c/instances/compute-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_subnetwork.compute_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-b/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/genuine-rope-423613-a9/zones/us-central1-b/instances/db-instance",
            "instance_id": "615037305549741017",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cV7Jrqpe2bE=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.42.249.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-db",
                "subnetwork_project": "genuine-rope-423613-a9"
              }
            ],
            "project": "genuine-rope-423613-a9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/zones/us-central1-b/instances/db-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_subnetwork.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "977235823221530176",
            "project": "genuine-rope-423613-a9",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-19T13:27:50.118-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "bastion-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "genuine-rope-423613-a9",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "compute_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-19T13:27:50.095-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-compute",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "bastion-compute",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "genuine-rope-423613-a9",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-compute",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-19T13:27:50.000-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-db",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "bastion-db",
            "network": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "genuine-rope-423613-a9",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/genuine-rope-423613-a9/regions/us-central1/subnetworks/bastion-db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}